[package]
name = "quality-asciicker-conversations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asciicker-rs = "0.0.3"
#asciicker-rs = "0.0.2"
tokio = {version = "*", features = ["full"]}
lazy_static = "1.4.0"
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1.0.79"
